Fix: Enable copy/select and improve audio playback on iOS Safari - Remove pointer-events: none from audio - Change user-select from none to text globally - Disable restrictive no-copy.css rules

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,17 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Prevent text selection and copying */
+/* Allow text selection */
 * {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    -webkit-user-select: text;
+    -moz-user-select: text;
+    -ms-user-select: text;
+    user-select: text;
 }
 
-/* Hide audio download controls and prevent downloading */
+/* Audio controls styling */
 audio {
-    pointer-events: none !important;
+    pointer-events: auto !important;
     user-select: none !important;
 }
 
@@ -27,22 +27,12 @@ audio::-internal-media-controls-download-button {
     display: none !important;
 }
 
-/* Only show essential controls */
+/* Show essential controls */
 audio::-webkit-media-controls-timeline,
 audio::-webkit-media-controls-play-button,
 audio::-webkit-media-controls-volume-slider {
     display: block !important;
     pointer-events: auto !important;
-}
-
-/* Additional security */
-audio {
-    -webkit-touch-callout: none !important;
-    -webkit-user-select: none !important;
-    -moz-user-select: none !important;
-    -ms-user-select: none !important;
-    user-select: none !important;
-    -webkit-tap-highlight-color: transparent !important;
 }
 
 @layer components {
